# ts-ai-bot

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_zh.md  TS-AI-Bot.sln  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tslientlib.code-workspace
NanoWakeWord/: NanoWakeWord.csproj  WakeWordRuntime.cs
TS-AI-Bot/: AppSettings.cs  AudioPlayer.cs  AudioUtils.cs  AzureTtsClient.cs  Dockerfile  DoubaoTtsClient.cs  OmniLlmClient.cs  Program.cs  TS-AI-Bot.csproj  TsAudioSender.cs  TsBot.cs  TtsAudioProducer.cs  VoiceCloneTtsClient.cs  WakeWordDetector.cs  WakeWordReceiver.cs  config.yaml.example  voice.yaml
TSLib/: README.md
TSLib/docs/: TSLib-API-Documentation.md
TSLib/src/TSLib/: TSLib.csproj
TS_AI_Bot.Tests/: LlmClientTests.cs  TS_AI_Bot.Tests.csproj
_inspect/: Program.cs
native/tsclientlib-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
native/tsclientlib-node/examples/: record_mixed.js  simple.ts  text_chat.ts
native/tsclientlib-node/scripts/: prepare-native.js
native/tsclientlib-node/src/: lib.rs
rust/: Cargo.toml  README.md
rust/tsclientlib/: Cargo.toml
rust/tsclientlib/examples/: audio_mp3_5s.rs  audio_record_5s.rs
rust/tsclientlib/src/: audio.rs
src/: llm.ts  main.ts  tts.ts  wake_word_engine.ts
web/: .env.development  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/pages/: AuthHandler.tsx  BotHome.tsx  StatusQrExpired.tsx  StatusUnauthorized.tsx
web/src/utils/: request.ts
(+1 files in other folders)
