[package]
name = "tsclientlib-node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
audiopus = "0.3.0-rc.0"
base64 = "0.22"
futures = "0.3"
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tsclientlib = { path = "../../rust/tsclientlib" }
tsproto-packets = { path = "../../rust/utils/tsproto-packets" }

[build-dependencies]
napi-build = "2"

[workspace]

[patch.crates-io]
native-tls = { path = "../../rust/tsclientlib/vendor/native-tls-0.2.17" }
